--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,8 +14,8 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:ems="10"
+        android:hint="Contractor's Name"
         android:inputType="textPersonName"
-        android:text="Contractor's Name"
         android:textColor="#000000"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -43,8 +43,8 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="28dp"
         android:ems="10"
+        android:hint="No. of Dependents"
         android:inputType="number"
-        android:text="No. of Dependents"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cRole"
         tools:text="@string/nDep" />
@@ -56,8 +56,8 @@
         android:layout_marginTop="28dp"
         android:layout_marginEnd="24dp"
         android:ems="10"
+        android:hint="No. Hours Worked"
         android:inputType="number"
-        android:text="No. of Hours worked"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cRole"
         tools:text="@string/nHrs" />
